--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "@tanstack/react-query": "^4.29.5",
     "axios": "^1.4.0",
     "react": "18.1.0",
     "react-native": "0.70.0",
     "react-native-paper": "^5.7.2",
     "react-native-safe-area-context": "^4.5.2",
-    "react-native-screens": "^3.20.0"
+    "react-native-screens": "^3.20.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
