--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "clean:node": "rm -rf node_modules yarn.lock",
     "clean:android": "cd android && ./gradlew clean && cd ..",
-    "realese:android": "cd android && ./gradlew assembleRelease && cd .. ",
+    "release:android": "cd android && ./gradlew assembleRelease && cd .. ",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
